<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/nombre"
            android:id="@+id/textName" tools:layout_editor_absoluteY="92dp" tools:layout_editor_absoluteX="91dp"
        android:autofillHints="" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/apellido"
            android:id="@+id/textSurname" tools:layout_editor_absoluteY="183dp" tools:layout_editor_absoluteX="91dp"
        android:autofillHints="" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:id="@+id/textPass" tools:layout_editor_absoluteY="286dp" tools:layout_editor_absoluteX="91dp"
        android:autofillHints="" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/textEmail" tools:layout_editor_absoluteY="387dp" tools:layout_editor_absoluteX="94dp"
        android:autofillHints="" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/tel_fono"
            android:id="@+id/textPhone" tools:layout_editor_absoluteY="501dp" tools:layout_editor_absoluteX="91dp"
        android:autofillHints="" />
    <Button
            android:text="@string/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonRegistro" tools:layout_editor_absoluteY="581dp"
            tools:layout_editor_absoluteX="150dp"/>
</LinearLayout>